--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,3 +1,4 @@
+/*
 * {
 font-family: Arial, Helvetica, sans-serif;
 font-size: 16px;
@@ -8,10 +9,19 @@ body {
     
 }
 
+header {
+    background-color: khaki;
+    width: 1000px;
+    height: 50px;
+    padding: inherit;
+    margin: auto;
+    
+}
+
 main {
     background-color: rgb(192, 28, 61);
     width: 500px;
     margin: auto;
-    padding: 10px;
+    padding: 70px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.493);
 }
