--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,17 +1,70 @@
-/** {
+* body {
 font-family: Arial, Helvetica, sans-serif;
 font-size: 16px;
+background: rgb(240,239, 239);
+margin: 0;
+padding: 0;
 }
 
-body {
+
+/*body {
     background-color: rgb(128, 91, 163);
     
-}
+}*/
 
-main {
+/*main {
     background-color: rgb(192, 28, 61);
     width: 500px;
     margin: auto;
     padding: 10px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.493);
+}*/
+
+h1 {
+    margin: 0;
+    font-weight: 400;
 }
+h2 {
+    margin: 0;
+    font-weight: 400;
+    display: inline;
+}
+.box {
+    background: #fff;
+    width: 50rem;
+    padding: 3rem;
+    margin: 1rem auto;
+    border-radius: 0.5rem
+}
+.header {
+    display: grid;
+    grid-template-columns: 40% 60%;
+}
+.header-left {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    font-size: 2rem;
+}
+
+.nome{
+    font-weight: 200;
+    margin: 0;
+}
+
+.header-right {
+    width: 100%;
+    display: grid;
+    justify-items: end;
+}
+
+.header-right p {
+display:  inline;    
+}
+
+.icon {
+    color: rgb(190, 190, 190);
+    font-size: 1.5rem;
+    margin: 0.5rem;
+}
+
